Updated config template and env_validation
Env_validation now uses a different path for cp and fiji
The config template has been updated for the new functions

--- a/cellbaum_config.yml.template
+++ b/cellbaum_config.yml.template
@@ -1,13 +1,16 @@
 ---
 "data_dir": /path/to/your/images
-"cp_loc": /path/to/cellprofiler
-"fiji_loc": /path/to/fiji
-"pipe_loc": /path/to/imageprocessing/cppipes
-"final_dir": /path/to/output/directory
-"log_loc": /path/to/logs
+"cp_dir": /path/to/cell_profiler
+"fiji_dir": /path/to/fiji
+"pipe_loc": /path/to/cp_file/directory
+"output_dir": /path/to/output/directory
+"log_loc": /path/to/snakemake_logs
+"cell_config": /path/to/models/cell_config.json
+"minsize": 'minimum_cell_size'
+"maxsize": 'maximum_cell_size'
 "Name_keys":
  - 2021.01.18_10X_time_well_000{pp}_Z{ttt}_CH1.tif
- - 2021.01.18_10X_time_well_000{pp}_Z{ttt}_CH3_corrected.tiff
+ - 2021.01.18_10X_time_well_000{pp}_Z{ttt}_CH3_threshold.tiff
  - 2021.01.18_10X_time_well_000{pp}_Z{ttt}_CH4.tif
  - 2021.01.18_10X_time_well_000{pp}_Z{ttt}_Overlay.tif
 "Prefix": 
@@ -16,3 +19,18 @@
  - "CH4"
  - "Overlay"
 "Template": 1
+"Update_method": EXACT or APPROXIMATE
+"Max_search_radius": Number
+"Volume": 
+  - 
+   - X_min
+   - X_max
+  - 
+   - Y_min
+   - Y_max
+  - 
+   - Z_min
+   - Z_max
+"Step_size": Number
+"CP_Data_Keep" :'all' or
+ - list
