--- a/env.yml
+++ b/env.yml
@@ -7,3 +7,14 @@ dependencies:
     - snakemake-minimal
     - h5py
     - pandas
+    - pyyaml
+    - numpy # <- For CellProfiler
+    - matplotlib
+    - pip
+    - mysqlclient
+    - openjdk
+    - gtk2
+    - wxpython # <- End for CellProfiler
+    - pip:
+      - btrack
+      - cellprofiler
