--- a/cp_addons.yml
+++ b/cp_addons.yml
@@ -2,12 +2,18 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  - python >=3.6
   - numpy
   - matplotlib
   - pandas
-  - mysqlclient
   - openjdk
+  - scikit-learn
+  - mahotas
   - gtk2
-  - wxpython
+  - Jinja2=3.0.1
+  - inflect=5.3.0
+  - wxpython=4.1.0
+  - mysqlclient=1.4.4
+  - sentry-sdk=0.18.0
   - pip:
-    - cellprofiler
+    - cellprofiler==4.1.3
