--- a/env.yml
+++ b/env.yml
@@ -3,12 +3,14 @@ channels:
     - conda-forge
     - bioconda
 dependencies:
-    - python >=3.6
+    - python >=3.7
     - snakemake-minimal
     - h5py
     - pandas
     - pyyaml
     - ffmpeg
+    - pydantic
+    - cvxopt
     - pip
     - pip:
         - btrack
