Properly close files & allow passing a time subset to btrack

--- a/cellbaum_config.yml.template
+++ b/cellbaum_config.yml.template
@@ -53,3 +53,7 @@ Volume: auto or:
 Step_size: Number
 CP_Data_Keep :'all' or
  - list
+
+time_interval_to_track: # remove this to track all time points
+  min: first time point to send to btrack
+  max: last time point to send to btrack
