--- a/models/cell_config.json
+++ b/models/cell_config.json
@@ -50,19 +50,19 @@
         {
           "name": "cell_hypothesis",
           "hypotheses": ["P_FP", "P_init", "P_term", "P_link", "P_branch", "P_dead"],
-          "lambda_time": 5.0,
-          "lambda_dist": 3.0,
-          "lambda_link": 10.0,
-          "lambda_branch": 50.0,
+          "lambda_time": 4,
+          "lambda_dist": 2,
+          "lambda_link": 115,
+          "lambda_branch": 180,
           "eta": 1e-10,
-          "theta_dist": 20.0,
-          "theta_time": 5.0,
+          "theta_dist": 2,
+          "theta_time": 5,
           "dist_thresh": 40,
           "time_thresh": 2,
           "apop_thresh": 5,
           "segmentation_miss_rate": 0.1,
           "apoptosis_rate": 0.001,
-          "relax": true
+          "relax": false
         }
     }
 }
