--- a/supercloud_config.yml
+++ b/supercloud_config.yml
@@ -1,42 +1,46 @@
 ---
-data_dir: /home/gridsan/groups/galloway/data/2022.02.07-timelapse/all_wells
-cp_dir: /home/gridsan/groups/galloway/cluster_infrastructure/conda_envs/cellbaum/bin/
-fiji_dir: /home/gridsan/groups/galloway/bin/Fiji.app
-pipe_dir: /home/gridsan/groups/galloway/CellBaum/cp_files
-output_dir: /home/gridsan/groups/galloway/data/2022.02.07-timelapse/results
-log_dir: /home/gridsan/groups/galloway/data/2022.02.07-timelapse/results/Logs
-cell_config: /home/gridsan/groups/galloway/CellBaum/models/cell_config.json
-
-gray_channels:
-  CH1: max
-  CH2: max
-  CH3: max
-  CH4: max
-  Overlay: avg
+data_dir: /home/gridsan/blende/galloway_shared/data/2022.12.16_Hb9-Activation/2022.12.16_Hb9-Activation
+cp_dir: /home/gridsan/groups/galloway_shared/cluster_infrastructure/conda_envs/cellbaum/bin/
+fiji_dir: /home/gridsan/groups/galloway_shared/bin/Fiji.app
+pipe_dir: /home/gridsan/groups/galloway_shared/CellBaum/cp_files
+output_dir: /home/gridsan/groups/galloway_shared/data/2022.12.16_Hb9-Activation/CellBaum_results
+log_dir: /home/gridsan/groups/galloway_shared/data/2022.12.16_Hb9-Activation/CellBaum_results/Logs
+cell_config: /home/gridsan/groups/galloway_shared/CellBaum/models/cell_config.json
 
 folder_merging_needed: False
+
+gray_channels:
+  CH2: max
+  CH3: max
+  CH4: avg
+  Overlay: avg
+
 focus_finding_needed: True
 image_regex: (?P<prefix>.*)_(?P<time>T\d{4})_(?P<well>XY\d{2})_(?P<position>\d{5})_Z(?P<stack>\d{3})_(?P<channel>.*)\.tif
 focus_channels:
+ - CH2
  - CH3
+ - CH4
+ - Overlay
 
-example_image_name: 10X_T0001_XY01_00001_Z001_CH2.tif
+example_image_name: 10x_T0001_XY01_00001_Z001_CH2.tif
 
 stitching: 
   grid_width: 3
-  grid_height: 2
-minsize: 15
-maxsize: 40
-pre_stitch_correction_needed: false
-
+  grid_height: 4
 Prefix: 
  - CH2
  - CH3
  - CH4
  - Overlay
-Template: 1
-Update_method: EXACT
-Max_search_radius: 50
+Template: 3
+
+minsize: 7
+maxsize: 65
+pre_stitch_correction_needed: false
+
+Update_method: APPROXIMATE
+Max_search_radius: 100
 Volume: 'auto'
-Step_size: 1
+Step_size: 100
 CP_Data_Keep: 'all'
